sized the main div correctly so that user can't scroll down and nothing is cut off - finally!!

--- a/src/containers/MainContent/MainContent.css
+++ b/src/containers/MainContent/MainContent.css
@@ -1,5 +1,5 @@
 .container {
-  height: 95vh;
+  height: 100%;
   box-sizing: border-box;
   overflow: visible;
   background-color: tomato;
